tests/baselines/reference/tsxDynamicTagName2.errors.txt
tsxDynamicTagName2.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
tsxDynamicTagName2.tsx(9,1): error TS2339: Property 'customTag' does not exist on type 'JSX.IntrinsicElements'.
tsxDynamicTagName2.tsx(9,25): error TS2339: Property 'customTag' does not exist on type 'JSX.IntrinsicElements'.


==== tsxDynamicTagName2.tsx (3 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
            div: any
    	}
    }
    
    var customTag = "h1";
    <customTag> Hello World </customTag>  // This should be an error. The lower-case is look up as an intrinsic element name
    ~~~~~~~~~~~
!!! error TS2339: Property 'customTag' does not exist on type 'JSX.IntrinsicElements'.
                            ~~~~~~~~~~~~
!!! error TS2339: Property 'customTag' does not exist on type 'JSX.IntrinsicElements'.